<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/avalible_resources"
        android:id="@+id/textView"
        android:singleLine="false"
        android:padding="10dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/free_budget"
            android:singleLine="false"
            android:padding="10dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="1070 zł"
            android:id="@+id/free_budget_value"
            android:textStyle="bold"
            android:singleLine="false"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="10dp" />
    </LinearLayout>

    <include layout="@layout/divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/transaction"
        android:id="@+id/textView2"
        android:singleLine="false"
        android:padding="10dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/income"
            android:id="@+id/textView4"
            android:singleLine="false"
            android:padding="10dp" />

        <include
            android:id="@+id/income_progress"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            layout="@layout/progress"
            />
        </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        >

    <TextView
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/expense"
        android:id="@+id/textView5"
        android:singleLine="false"
        android:padding="10dp" />

    <include
        android:id="@+id/expense_progress"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        layout="@layout/progress"
        />



</LinearLayout>

    <include layout="@layout/divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/budget"
        android:id="@+id/textView3"
        android:singleLine="false"

        android:padding="10dp"
        android:textStyle="bold" />

    <include
        android:id="@+id/expense_progress"
        layout="@layout/progress"
        />

</LinearLayout>